--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,19 @@
 <h1>Hello Haneef</h1>
 <a routerLink="home">Home</a>
-<br>
+<br />
 <a routerLink="about">About</a>
-<br>
+<br />
 <a routerLink="user">User</a>
 
-<br><br>
+<br /><br />
 <a routerLink="user/20">Haneef</a>
-<br>
+<br />
 <a routerLink="user/30">Fazal</a>
-<br>
+<br />
 <a routerLink="user/40">Sahil</a>
+
+<!-- what is services  -->
+
+<!-- services is a block of code in which different functionality can be done by some code  -->
 
 <router-outlet></router-outlet>
