--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,3 +23,5 @@
 <!-- services is a block of code in which different functionality can be done by some code  -->
 
 <app-footer></app-footer>
+
+<!-- API calling  -->
